# SAKRA

./: README.md
CYRIC20/: ADCtoE_mpr.txt  ADCtoE_mpr.txt~  DrawAllHistograms.C  Ecal_201117.hpp  Ecal_201117.hpp~  Ecal_201117_2.hpp~  Fit_3alpha.C  Makefile  adc.C  adc.C~  ana_sakra  ana_sakra.cpp  ana_sakra.cpp~  ana_sakra_old.cpp  last.kumac  last.kumacold  proton_ave.C  proton_ave.C~  rADC_col.C  ridf  root  si_cal.cc
CYRIC20/murata/dedx/data/: 10B100.txt  10B500.txt  12C100.txt  3He100.txt  3He500.txt  6Li100.txt  6Li500.txt  7Li100.txt  9Be100.txt  9Be500.txt  a100.txt  a500.txt  d100.txt  d500.txt  p100.txt  p500.txt  t100.txt  t500.txt
CYRIC20/murata/dedx/source/: CMakeLists.txt  CMakeLists.txt~  dedx.cpp
CYRIC20/murata/hit/: root
CYRIC20/murata/hit/config/: directory_cfg.txt  directory_cfg.txt~
CYRIC20/murata/hit/source/: CMakeLists.txt  CMakeLists.txt~  hit.cpp  hit.cpp~  hit_org.cpp
CYRIC20/murata/hit/source/include/: ChannelMap.hpp  ChannelMap.hpp~  Config.hpp
CYRIC20/murata/par/: ADCtoE.txt~  a.out  par.cpp
CYRIC20/murata/signal/source/: CMakeLists.txt  signal.cpp  signal.cpp~
CYRIC20/murata/test/: a.out  test.cpp  test.cpp~
CYRIC20_test/: #Ecal_201117.hpp#  #adc.C#  ADC_col.C  ADC_col.C~  ADC_col_old.C  ADCtoE_caen.txt  ADCtoE_mpr_backup_.txt  Dict.cc  Dict_rdict.pcm  DrawAllHistograms.C~  Ecal_201117_2.hpp  Ecal_201117_preampswap.hpp  Ecal_201117_preampswap.hpp~  LinkDef.h  Makefile  ana_sakra  ana_sakra.201117.cpp  ana_sakra.cpp  ana_sakra.cpp~  par.cpp  rADC_col.C~  rADC_col_C.d  rADC_col_C_ACLiC_dict_rdict.pcm  ridf  si_cal.cc~
ana/: ADC_col.C  ADC_col.C~  Fit_3alpha.C~  Gomen.cc~  gomi.root  proton_ave.C~  wave_ave.C  wave_ave.C~
ana/macro/: timing_shift.cc
ana_class/: #ana_sakra.cpp#  #test.cpp#  .rootlogon.C  .rootlogon.C~  ChEvent.cpp  ChEvent.cpp~  ChEvent.hpp  ChEvent.hpp~  Gomen.cc  LinkDef.h  Makefile  Makefile~  MyclassDict.cpp  MyclassDict.cpp_tmp_12996  MyclassDict_rdict.pcm  RunInfo.cpp  RunInfo.cpp~  RunInfo.hpp  V1730ZLE.cpp  V1730ZLE.cpp~  V1730ZLE.hpp  V1730ZLE.hpp~  V1730ZLEHeader.cpp  V1730ZLEHeader.cpp~  V1730ZLEHeader.hpp  V1730ZLEHeader.hpp~  alpha_ave.C~  ana_sakra  ana_sakra.cpp  ana_sakra.cpp~  ana_sakra_cp.cpp  comment.txt  draw_wf.C  draw_wf.C~  proton_ave.C
ana_class/macro/: timing_shift.cc~
kobe_oct/: ADC_col.C  ADC_col.C~  ADC_col_C.d  ADC_col_C_ACLiC_dict_rdict.pcm  ADC_col_old.C  Makefile  alpha_ave.C  ana_sakra  ana_sakra.cpp  ana_sakra.cpp~  rADC_col.C~  ridf  root  wave.C  wave_ave.C  wave_ave.C~
